Fixed kebab menu overflow

--- a/src/components/Investor/Cards/FeedPost/feedPostCard.scss
+++ b/src/components/Investor/Cards/FeedPost/feedPostCard.scss
@@ -185,7 +185,7 @@
               }
 
               svg {
-                flex: 0 0 25px;
+                // flex: 0 0 25px;
               }
             }
             li:last-child {
